{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 23,
  "lineage": "dbf8ec44-487a-1266-4390-6ca299472aac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pdc_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b54d725f940e0d1e",
            "arn": "arn:aws:ec2:us-east-2:187940856853:instance/i-0666993110061fde0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "AmazonSSMRoleForInstancesQuickSetup",
            "id": "i-0666993110061fde0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "nkere_dc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d121f14b8cd841ea",
            "private_dns": "ip-10-3-1-72.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.3.1.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-046fb58e94d8cb15a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a695d8aaffc191d",
            "tags": {
              "Name": "DN-PDC-East-2"
            },
            "tags_all": {
              "Name": "DN-PDC-East-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067be4e310ad3da24"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_east_2a",
            "aws_vpc.vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rodc_west_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090f1243429a46b63",
            "arn": "arn:aws:ec2:us-west-2:187940856853:instance/i-0a2a4688f412bf4fa",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "AmazonSSMRoleForInstancesQuickSetup",
            "id": "i-0a2a4688f412bf4fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "dn-rodc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c9abf134259220b3",
            "private_dns": "ip-10-4-1-113.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.4.1.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c8a10f586e68932f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025064eb04b0f0fe4",
            "tags": {
              "Name": "DN-RODC-West-2"
            },
            "tags_all": {
              "Name": "DN-RODC-West-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e64751f4f200a26"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_west_2a",
            "aws_vpc.vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_from_east_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ccc0047cdca403352398100704",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ccc0047cdca40335",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0c5935460ac1d6e69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_us_east_2",
            "aws_vpc.vpc_us_west_2",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_from_west_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.3.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c755ee757bd5ca6c2218071545",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c755ee757bd5ca6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0c5935460ac1d6e69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_us_east_2",
            "aws_vpc.vpc_us_west_2",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_sg_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:187940856853:security-group/sg-0c0cd60eb4853f65a",
            "description": "Security group for SSM endpoints in us-east-2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0cd60eb4853f65a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dn-ssm-sg-east",
            "name_prefix": "",
            "owner_id": "187940856853",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b37124fa9df109f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_sg_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187940856853:security-group/sg-049fa8bc52cd72f40",
            "description": "Security group for SSM endpoints in us-west-2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049fa8bc52cd72f40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dn-ssm-sg-west",
            "name_prefix": "",
            "owner_id": "187940856853",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067b5cf107c2146b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_east_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:187940856853:subnet/subnet-03a695d8aaffc191d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a695d8aaffc191d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-east-2a"
            },
            "tags_all": {
              "Name": "subnet-east-2a"
            },
            "vpc_id": "vpc-0b37124fa9df109f9"
          },
          "dependencies": [
            "aws_vpc.vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_east_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:187940856853:subnet/subnet-077ec2b700b63be5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077ec2b700b63be5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-east-2b"
            },
            "tags_all": {
              "Name": "subnet-east-2b"
            },
            "vpc_id": "vpc-0b37124fa9df109f9"
          },
          "dependencies": [
            "aws_vpc.vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_west_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187940856853:subnet/subnet-025064eb04b0f0fe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025064eb04b0f0fe4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-west-2a"
            },
            "tags_all": {
              "Name": "subnet-west-2a"
            },
            "vpc_id": "vpc-067b5cf107c2146b7"
          },
          "dependencies": [
            "aws_vpc.vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_west_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187940856853:subnet/subnet-0ff92e318ee618bfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.4.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff92e318ee618bfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-west-2b"
            },
            "tags_all": {
              "Name": "subnet-west-2b"
            },
            "vpc_id": "vpc-067b5cf107c2146b7"
          },
          "dependencies": [
            "aws_vpc.vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_us_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:187940856853:vpc/vpc-0b37124fa9df109f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0dae0426f7d58116f",
            "default_route_table_id": "rtb-0ccc0047cdca40335",
            "default_security_group_id": "sg-067be4e310ad3da24",
            "dhcp_options_id": "dopt-97dba5fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b37124fa9df109f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ccc0047cdca40335",
            "owner_id": "187940856853",
            "tags": {
              "Name": "dn-vpc-us-east-2"
            },
            "tags_all": {
              "Name": "dn-vpc-us-east-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_us_west_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187940856853:vpc/vpc-067b5cf107c2146b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0dae1dbcdc82d0c20",
            "default_route_table_id": "rtb-0c755ee757bd5ca6c",
            "default_security_group_id": "sg-01e64751f4f200a26",
            "dhcp_options_id": "dopt-d1a791a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067b5cf107c2146b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c755ee757bd5ca6c",
            "owner_id": "187940856853",
            "tags": {
              "Name": "dn-vpc-us-west-2"
            },
            "tags_all": {
              "Name": "dn-vpc-us-west-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:187940856853:vpc-endpoint/vpce-05c7935d997ea0d95",
            "dns_entry": [
              {
                "dns_name": "vpce-05c7935d997ea0d95-yflugg0p.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-05c7935d997ea0d95-yflugg0p-us-east-2a.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-05c7935d997ea0d95-yflugg0p-us-east-2b.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ec2messages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0887702G81R818X5IYI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05c7935d997ea0d95",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-020d210ca0d084357",
              "eni-06a4a90e48e9673e6"
            ],
            "owner_id": "187940856853",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c0cd60eb4853f65a"
            ],
            "service_name": "com.amazonaws.us-east-2.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-03a695d8aaffc191d",
              "subnet-077ec2b700b63be5c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b37124fa9df109f9"
          },
          "dependencies": [
            "aws_security_group.ssm_sg_east",
            "aws_subnet.subnet_east_2a",
            "aws_subnet.subnet_east_2b",
            "aws_vpc.vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187940856853:vpc-endpoint/vpce-0add4f262de82dc96",
            "dns_entry": [
              {
                "dns_name": "vpce-0add4f262de82dc96-2t09roi6.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0add4f262de82dc96-2t09roi6-us-west-2b.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0add4f262de82dc96-2t09roi6-us-west-2a.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ec2messages.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z1003570283MF1NVNKCMP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0add4f262de82dc96",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0aeee41296f51d9e9",
              "eni-0ed80a24ca8525833"
            ],
            "owner_id": "187940856853",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fa8bc52cd72f40"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-025064eb04b0f0fe4",
              "subnet-0ff92e318ee618bfa"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-067b5cf107c2146b7"
          },
          "dependencies": [
            "aws_security_group.ssm_sg_west",
            "aws_subnet.subnet_west_2a",
            "aws_subnet.subnet_west_2b",
            "aws_vpc.vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:187940856853:vpc-endpoint/vpce-0e8c31f160b51ab82",
            "dns_entry": [
              {
                "dns_name": "vpce-0e8c31f160b51ab82-07qe2ywe.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0e8c31f160b51ab82-07qe2ywe-us-east-2a.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0e8c31f160b51ab82-07qe2ywe-us-east-2b.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssm.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z10263052ZL28KE2P1ES1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e8c31f160b51ab82",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08ef2045e218001e4",
              "eni-0f953b17763c0fc66"
            ],
            "owner_id": "187940856853",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c0cd60eb4853f65a"
            ],
            "service_name": "com.amazonaws.us-east-2.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-03a695d8aaffc191d",
              "subnet-077ec2b700b63be5c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b37124fa9df109f9"
          },
          "dependencies": [
            "aws_security_group.ssm_sg_east",
            "aws_subnet.subnet_east_2a",
            "aws_subnet.subnet_east_2b",
            "aws_vpc.vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187940856853:vpc-endpoint/vpce-0837bbfeb657b8171",
            "dns_entry": [
              {
                "dns_name": "vpce-0837bbfeb657b8171-3nw21dag.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0837bbfeb657b8171-3nw21dag-us-west-2a.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0837bbfeb657b8171-3nw21dag-us-west-2b.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ssm.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z08864562IZCNVKJFHGUD"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0837bbfeb657b8171",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-002d61d91585031c5",
              "eni-0f1e708edc4f87e98"
            ],
            "owner_id": "187940856853",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fa8bc52cd72f40"
            ],
            "service_name": "com.amazonaws.us-west-2.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-025064eb04b0f0fe4",
              "subnet-0ff92e318ee618bfa"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-067b5cf107c2146b7"
          },
          "dependencies": [
            "aws_security_group.ssm_sg_west",
            "aws_subnet.subnet_west_2a",
            "aws_subnet.subnet_west_2b",
            "aws_vpc.vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:187940856853:vpc-endpoint/vpce-0a471233399895ddb",
            "dns_entry": [
              {
                "dns_name": "vpce-0a471233399895ddb-okpxia3e.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0a471233399895ddb-okpxia3e-us-east-2a.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0a471233399895ddb-okpxia3e-us-east-2b.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssmmessages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0886624IUXVANCAGCH1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a471233399895ddb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03963e6f911ee914f",
              "eni-09ff9665dd29b6f74"
            ],
            "owner_id": "187940856853",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c0cd60eb4853f65a"
            ],
            "service_name": "com.amazonaws.us-east-2.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-03a695d8aaffc191d",
              "subnet-077ec2b700b63be5c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b37124fa9df109f9"
          },
          "dependencies": [
            "aws_security_group.ssm_sg_east",
            "aws_subnet.subnet_east_2a",
            "aws_subnet.subnet_east_2b",
            "aws_vpc.vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187940856853:vpc-endpoint/vpce-0d7e196097918523f",
            "dns_entry": [
              {
                "dns_name": "vpce-0d7e196097918523f-5xf9pfuq.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0d7e196097918523f-5xf9pfuq-us-west-2b.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0d7e196097918523f-5xf9pfuq-us-west-2a.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ssmmessages.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z09181402FTCRGY3DGVQZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d7e196097918523f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-042e3b744fc0f34f7",
              "eni-05d82304307724020"
            ],
            "owner_id": "187940856853",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fa8bc52cd72f40"
            ],
            "service_name": "com.amazonaws.us-west-2.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-025064eb04b0f0fe4",
              "subnet-0ff92e318ee618bfa"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-067b5cf107c2146b7"
          },
          "dependencies": [
            "aws_security_group.ssm_sg_west",
            "aws_subnet.subnet_west_2a",
            "aws_subnet.subnet_west_2b",
            "aws_vpc.vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0c5935460ac1d6e69",
            "peer_owner_id": "187940856853",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0b37124fa9df109f9",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "cross-region-vpc-peering"
            },
            "tags_all": {
              "Name": "cross-region-vpc-peering"
            },
            "vpc_id": "vpc-067b5cf107c2146b7"
          },
          "dependencies": [
            "aws_vpc.vpc_us_east_2",
            "aws_vpc.vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0c5935460ac1d6e69",
            "peer_owner_id": "187940856853",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0b37124fa9df109f9",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "cross-region-vpc-peering"
            },
            "tags_all": {
              "Name": "cross-region-vpc-peering"
            },
            "vpc_id": "vpc-067b5cf107c2146b7",
            "vpc_peering_connection_id": "pcx-0c5935460ac1d6e69"
          },
          "dependencies": [
            "aws_vpc.vpc_us_east_2",
            "aws_vpc.vpc_us_west_2",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    }
  ]
}